# AGL

./: .gitignore  3rd Party Licenses.txt  CMakeLists.txt  Defines.txt  README.md
include/agl/: agl.hpp  context_util.hpp  objects.hpp  opengl.hpp
source/: CMakeLists.txt  context_util.cpp  objects.cpp
